--- a/war/Tagbuilder.html
+++ b/war/Tagbuilder.html
@@ -11,7 +11,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ws/8.5.0/ws.min.js"></script>
   <script>
-    /*const ws = new WebSocket("ws://192.168.0.108:8000");
+    const ws = new WebSocket("ws://192.168.0.108:8000");
 
     var data = null;
 
@@ -32,6 +32,6 @@
     function getAssetData(){
       return data;
     }
-    */
+
   </script>
 </html>
