--- a/war/Tagbuilder.html
+++ b/war/Tagbuilder.html
@@ -18,15 +18,17 @@
 
     var elementsData = null;
     var childData = {};
+    var callback;
 
     ws.onopen = function () {
-      ws.send(JSON.stringify({ request: "elementsHierarchy", id: "" }));
+      // ws.send(JSON.stringify({ request: "elementsHierarchy", id: "" }));
     };
 
     ws.onmessage = function (event) {
       if (event.data) {
         elementsData = event.data;
-        console.log(elementsData);
+        // console.log(elementsData);
+        callback(elementsData);
       }
     };
 
@@ -39,7 +41,8 @@
       return elementsData;
     }
 
-    function sendMessageToServer(message) {
+    function sendMessageToServer(message, cb) {
+      callback = cb;
       elementsData = null;
       console.log(message);
       ws.send(message);
